--- a/CSS/main.css
+++ b/CSS/main.css
@@ -33,7 +33,16 @@ html {
   }
 }
 
-body {
+ 
+.todos-form-button{
+
+  background-color: rgb(185, 26, 26)226, 110, 110;
+  }
+  
+
+
+body { 
+  background-image: url("/img/desktop.jpeg");
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
@@ -44,12 +53,7 @@ body {
   grid-template-columns: 15fr 10fr 15fr;
   grid-template-rows: 1fr 7fr 1fr;
 }
-
-input[type=checkbox] + label .todos-list__li-icon-2 {
-  stroke-dasharray: 70;
-  stroke-dashoffset: 70;
-}
-
+ 
 input[type=checkbox] + label .todos-list__li-text-2 {
   stroke-dasharray: 360;
   stroke-dashoffset: 360;
@@ -59,11 +63,7 @@ input[type=checkbox] + label .checked {
   opacity: 1;
 }
 
-input[type=checkbox]:checked + label .todos-list__li-icon-2 {
-  stroke-dashoffset: 0;
-  transition: stroke-dashoffset 0.8s ease-in;
-}
-
+ 
 input[type=checkbox]:checked + label .todos-list__li-text-2 {
   stroke-dashoffset: 0;
   transition: stroke-dashoffset 0.8s ease-in;
@@ -76,11 +76,7 @@ input[type=checkbox]:checked + label .todos-list__li-text-2 {
 .checked {
   opacity: 0.7;
 }
-
-input[type=checkbox]:not(:checked) + label .todos-list__li-icon-2 {
-  stroke-dashoffset: 70;
-  transition: stroke-dashoffset 0.4s ease-out;
-}
+ 
 
 input[type=checkbox]:not(:checked) + label .todos-list__li-text-2 {
   stroke-dashoffset: 360;
@@ -100,6 +96,7 @@ ul li {
 }
 
 .todos {
+  
   display: grid;
   grid-column: 2/3;
   grid-row: 2/3;
@@ -175,20 +172,9 @@ ul li {
   justify-content: space-between;
   position: relative;
 }
+ 
 
-.todos-list__li-icon {
-  position: absolute;
-  grid-column: 1/2;
-}
-
-.todos-list__li-icon-1 {
-  position: absolute;
-  margin-top: -1.2px;
-}
-
-.todos-list__li-icon-2 {
-  margin-left: 0.8rem;
-}
+ 
 
 .todos-list__li-text {
   border-radius: 5rem;
